--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,9 +1,5 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends "base.html" %}
 
-<h1>About Us</h1>
-<p>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad nihil eum at,
-  voluptatem reprehenderit tempora quidem in. Eos, officiis sint! Quam eveniet
-  ab fugiat doloremque accusamus culpa autem nulla asperiores!
-</p>
+{% block content %}
+    <h1>Hi {{ user.username }}, this is the About Page!</h1>
 {% endblock %}
