--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {%block content%}
+{% extends 'base.html' %} 
+
+{%block content%}
 
 <h1>Sign In</h1>
 <form action="" method="post" novalidate>
@@ -6,14 +8,18 @@
   <p>
     {{ form.username.label }}<br />
     {{ form.username(size=32) }}
+    {% for error in form.username.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
   </p>
   <p>
     {{ form.password.label }}<br />
     {{ form.password(size=32) }}
+    {% for error in form.username.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
   </p>
   <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
   <p>{{ form.submit() }}</p>
-
-  
 </form>
 {% endblock %}
